--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Intel: Sustainability Through the Ages</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.rtl.min.css">
 </head>
 <body>
 
@@ -12,12 +13,8 @@
   <header>
     <div>
       <img src="img/intel-header-logo.svg" alt="Intel Logo" />
-      <!-- Main Heading -->
-      <h1>
-        Sustainability Through the Ages
-      </h1>
-
-      <!-- Subheading / Description -->
+      <h1>Sustainability <br />Through the Ages</h1>
+      <div class="divider"></div>
       <p>
         Explore Intel's journey through time, discovering how our commitment
         to innovation has shaped a more sustainable future for technology 
@@ -26,135 +23,129 @@
     </div>
   </header>
 
-  <!-- Timeline Cards Section -->
-  <section>
-    <!-- Card 1: 1968 -->
-    <div>
-      <h2>1968</h2>
-      <h3>Intel Founded</h3>
-      <img src="img/1.jpg" alt="Placeholder Image" />
-      <p>
-        Robert Noyce and Gordon Moore rename the newly formed company 
-        NM Electronics to Intel Corporation, laying the foundation for 
-        decades of technological innovation.
-      </p>
-    </div>
+  <!-- Timeline Section -->
+  <section class="timeline-container">
+    <div class="timeline">
 
-    <!-- Card 2: 1971 -->
-    <div>
-      <h2>1971</h2>
-      <h3>First Microprocessor</h3>
-      <img src="img/2.jpg" alt="Placeholder Image" />
-      <p>
-        Intel debuts the 4004, the world's first commercial microprocessor, 
-        igniting the microprocessor revolution and propelling the future 
-        of computing devices.
-      </p>
-    </div>
+      <!-- 1968 -->
+      <div class="timeline-event" style="background-image: url('img/1.jpg');">
+        <span class="date">1968</span>
+        <h3>Intel Founded</h3>
+        <div class="content">
+          <span class="desc">
+            Robert Noyce and Gordon Moore rename the newly formed company NM Electronics to Intel Corporation, laying the foundation for decades of technological innovation.
+          </span>
+        </div>
+      </div>
 
-    <!-- Card 3: 1978 -->
-    <div>
-      <h2>1978</h2>
-      <h3>8086 Processor</h3>
-      <img src="img/3.jpg" alt="Placeholder Image" />
-      <p>
-        Launch of the 8086 processor, establishing the x86 architecture 
-        that drives countless PCs and servers in the modern era.
-      </p>
-    </div>
+      <!-- 1971 -->
+      <div class="timeline-event" style="background-image: url('img/2.jpg');">
+        <span class="date">1971</span>
+        <h3>First Microprocessor</h3>
+        <div class="content">
+          <span class="desc">
+            Intel debuts the 4004, the world's first commercial microprocessor, igniting the microprocessor revolution and propelling the future of computing devices.
+          </span>
+        </div>
+      </div>
 
-    <!-- Card 4: 1985 -->
-    <div>
-      <h2>1985</h2>
-      <h3>386 Processor</h3>
-      <img src="img/4.jpg" alt="Placeholder Image" />
-      <p>
-        Intel introduces the 386 processor with 32-bit architecture, 
-        ushering in a new era of performance and multitasking for 
-        personal computers.
-      </p>
-    </div>
+      <!-- 1978 -->
+      <div class="timeline-event" style="background-image: url('img/3.jpg');">
+        <span class="date">1978</span>
+        <h3>8086 Processor</h3>
+        <div class="content">
+          <span class="desc">
+            Launch of the 8086 processor, establishing the x86 architecture that drives countless PCs and servers in the modern era.
+          </span>
+        </div>
+      </div>
 
-    <!-- Card 5: 2006 -->
-    <div>
-      <h2>2006</h2>
-      <h3>Peak GHG Emissions</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
-      <p>
-        This year marks Intel's highest annual greenhouse gas emissions 
-        for operations. Over subsequent years, Intel invests heavily in 
-        chemical abatement, renewable energy, and energy-efficient 
-        manufacturing to reverse this trend.
-      </p>
-    </div>
+      <!-- 1985 -->
+      <div class="timeline-event" style="background-image: url('img/4.jpg');">
+        <span class="date">1985</span>
+        <h3>386 Processor</h3>
+        <div class="content">
+          <span class="desc">
+            Intel introduces the 386 processor with 32-bit architecture, ushering in a new era of performance and multitasking for personal computers.
+          </span>
+        </div>
+      </div>
 
-    <!-- Card 6: 2020 -->
-    <div>
-      <h2>2020</h2>
-      <h3>RISE Strategy</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
-      <p>
-        Intel launches its RISE (Responsible, Inclusive, Sustainable, 
-        Enabling) strategy and 2030 goals, aiming to drive industry-wide 
-        progress on climate action, water stewardship, and waste reduction.
-      </p>
-    </div>
+      <!-- 2006 -->
+      <div class="timeline-event" style="background-image: url('img/5.jpg');">
+        <span class="date">2006</span>
+        <h3>Peak GHG Emissions</h3>
+        <div class="content">
+          <span class="desc">
+            This year marks Intel's highest annual greenhouse gas emissions for operations. Over subsequent years, Intel invests heavily in chemical abatement, renewable energy, and energy-efficient manufacturing to reverse this trend.
+          </span>
+        </div>
+      </div>
 
-    <!-- Card 7: 2022 -->
-    <div>
-      <h2>2022</h2>
-      <h3>Net-Zero By 2040</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
-      <p>
-        Intel announces its commitment to achieve net-zero greenhouse 
-        gas emissions (Scope 1 and 2) across its global operations 
-        by 2040, building on years of environmental initiatives.
-      </p>
-    </div>
+      <!-- 2020 -->
+      <div class="timeline-event" style="background-image: url('img/6.jpg');">
+        <span class="date">2020</span>
+        <h3>RISE Strategy</h3>
+        <div class="content">
+          <span class="desc">
+            Intel launches its RISE (Responsible, Inclusive, Sustainable, Enabling) strategy and 2030 goals, aiming to drive industry-wide progress on climate action, water stewardship, and waste reduction.
+          </span>
+        </div>
+      </div>
 
-    <!-- Card 8: 2023 -->
-    <div>
-      <h2>2023</h2>
-      <h3>Renewable Electricity</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
-      <p>
-        The company achieves 99% renewable electricity usage worldwide, 
-        helping to drastically lower carbon emissions and driving progress 
-        toward Intel's long-term sustainability goals.
-      </p>
-    </div>
+      <!-- 2022 -->
+      <div class="timeline-event" style="background-image: url('img/7.jpg');">
+        <span class="date">2022</span>
+        <h3>Net-Zero By 2040</h3>
+        <div class="content">
+          <span class="desc">
+            Intel announces its commitment to achieve net-zero greenhouse gas emissions (Scope 1 and 2) across its global operations by 2040, building on years of environmental initiatives.
+          </span>
+        </div>
+      </div>
 
-    <!-- Card 9: 2024 -->
-    <div>
-      <h2>2024</h2>
-      <h3>Sustainability Summit</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
-      <p>
-        Intel hosts its first Sustainability Summit, uniting suppliers, 
-        government officials, and industry leaders to collaborate on 
-        next-generation sustainable semiconductor manufacturing.
-      </p>
+      <!-- 2023 -->
+      <div class="timeline-event" style="background-image: url('img/8.jpg');">
+        <span class="date">2023</span>
+        <h3>Renewable Electricity</h3>
+        <div class="content">
+          <span class="desc">
+            The company achieves 99% renewable electricity usage worldwide, helping to drastically lower carbon emissions and driving progress toward Intel's long-term sustainability goals.
+          </span>
+        </div>
+      </div>
+
+      <!-- 2024 -->
+      <div class="timeline-event" style="background-image: url('img/9.jpg');">
+        <span class="date">2024</span>
+        <h3>Sustainability Summit</h3>
+        <div class="content">
+          <span class="desc">
+            Intel hosts its first Sustainability Summit, uniting suppliers, government officials, and industry leaders to collaborate on next-generation sustainable semiconductor manufacturing.
+          </span>
+        </div>
+      </div>
+
     </div>
   </section>
-
-  <!-- 3-Column Content Section -->
-  <section>
-    <div>
-      
-      <!-- Column 1 -->
-      <div>
+<!-- 3-Column Content Section -->
+<section class="container my-5 three-col-section">
+  <div class="row text-center">
+    <!-- Column 1 -->
+    <div class="col-12 col-md-4 mb-4 mb-md-0">
+      <div class="p-4 border rounded bg-light h-100 d-flex flex-column justify-content-between">
         <h2>RISE Strategy</h2>
         <p>
           Under its RISE (Responsible, Inclusive, Sustainable, Enabling) strategy, 
           Intel sets ambitious 2030 goals, including driving industry-wide 
           progress on climate action, water stewardship, and waste reduction.
         </p>
-        <!-- Learn More Button -->
-        <a href="#">Learn More</a>
+        <a href="#" class="btn btn-primary mt-3 align-self-center">Learn More</a>
       </div>
-
-      <!-- Column 2 -->
-      <div>
+    </div>
+    <!-- Column 2 -->
+    <div class="col-12 col-md-4 mb-4 mb-md-0">
+      <div class="p-4 border rounded bg-light h-100 d-flex flex-column justify-content-between">
         <h2>Commitment</h2>
         <p>
           In 2022, Intel pledged to achieve net-zero greenhouse gas emissions 
@@ -162,12 +153,12 @@
           environmental initiatives and partnerships across the semiconductor 
           industry.
         </p>
-        <!-- Learn More Button -->
-        <a href="#">Learn More</a>
+        <a href="#" class="btn btn-primary mt-3 align-self-center">Learn More</a>
       </div>
-
-      <!-- Column 3 -->
-      <div>
+    </div>
+    <!-- Column 3 -->
+    <div class="col-12 col-md-4">
+      <div class="p-4 border rounded bg-light h-100 d-flex flex-column justify-content-between">
         <h2>Water &amp; Waste</h2>
         <p>
           Intel conserves billions of gallons of water annually and 
@@ -175,17 +166,24 @@
           Intel also upcycles and recycles materials to reduce waste and 
           advance a circular economy.
         </p>
-        <!-- Learn More Button -->
-        <a href="#">Learn More</a>
+        <a href="#" class="btn btn-primary mt-3 align-self-center">Learn More</a>
       </div>
-
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- Subscription Form -->
-  <section>
-    <h2>Subscribe to our Newsletter</h2>
-    <!-- Add form here -->
-  </section>
+  <p>Scroll to view timeline | Hover over cards to learn more!</p>
+    <footer class="bg-dark text-light py-4 mt-5">
+      <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
+        <div class="mb-3 mb-md-0">
+          &copy; 2025 Intel Corporation. All rights reserved.
+        </div>
+        <nav aria-label="Footer navigation">
+          <a href="#" class="text-light mx-2">Privacy Policy</a>
+          <a href="#" class="text-light mx-2">Terms of Use</a>
+          <a href="#" class="text-light mx-2">Contact</a>
+        </nav>
+      </div>
+    </footer>
 </body>
 </html>
